force-app/main/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <description>This field stores the area occupied by the building.</description>
        <inlineHelpText>This field stores the area occupied by the building.</inlineHelpText>
        <label>Area(sq.ft)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Code__c</fullName>
        <label>Building Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field holds the description about the building.</description>
        <inlineHelpText>This field holds the description about the building.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_Gym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Gym</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Swimming_Pool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Swimming Pool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Flats__c</fullName>
        <label>Maximum Number of Flats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Of_Flats__c</fullName>
        <description>Calculates No. of flats that are currently present in the building</description>
        <inlineHelpText>Calculates No. of flats that are currently present in the building</inlineHelpText>
        <label>Number Of Flats</label>
        <summaryForeignKey>Flat__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_Of_Floors__c</fullName>
        <description>This field stores the number of floors in the building.</description>
        <inlineHelpText>This field stores the number of floors in the building.</inlineHelpText>
        <label>Number Of Floors</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building_Code__c</columns>
        <columns>Area__c</columns>
        <columns>City__c</columns>
        <columns>Has_Gym__c</columns>
        <columns>Has_Swimming_Pool__c</columns>
        <columns>Maximum_Number_of_Flats__c</columns>
        <columns>Number_Of_Floors__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Building_Code_in_upper_case</fullName>
        <active>false</active>
        <errorConditionFormula>OR(NOT(REGEX( Building_Code__c ,&quot;^[a-z  A-Z]*$&quot;)), Building_Code__c  &lt;&gt;  UPPER(Building_Code__c) )</errorConditionFormula>
        <errorDisplayField>Building_Code__c</errorDisplayField>
        <errorMessage>Building Code must be in alphabets and uppercase only</errorMessage>
    </validationRules>
</CustomObject>